# FaceRecognization

./: CMakeLists.txt  README.md  build.bat
FaceAlignment/: CMakeLists.txt
FaceDetection/: CMakeLists.txt
FaceDetection/include/: face_detection.h  mtcnn.h
FaceDetection/ncnn/: mat.cpp  net.cpp
FaceDetection/src/: face_detection.cpp  mtcnn.cpp
FaceIdentification/: CMakeLists.txt
MatTools/: CMakeLists.txt
MatTools/include/: ImageProcess.h  MSRCR.h  MatTools.h
MatTools/src/: ImageProcess.cpp  MSRCR.cpp  MatTools.cpp  printScreen.cpp
include/: FaceApi.h
src/: FaceApi.cpp
